--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "Erwan Ledoux",
   "dependencies": {
     "immutable": "^3.8.1",
+    "lodash.camelcase": "^4.3.0",
+    "lodash.isequal": "^4.5.0",
     "lodash.merge": "^4.6.0",
     "lodash.mergewith": "^4.6.0",
     "lodash.values": "^4.3.0",
@@ -38,5 +40,5 @@
     "dev": "npm run dev",
     "dev-watch": "nodemon --watch src --exec \"npm run compile\""
   },
-  "version": "0.0.1"
+  "version": "0.0.2"
 }
